--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   "author": "danitheturtle",
   "dependencies": {
     "@babel/runtime": "^7.14.8",
-    "env": "workspace:*",
+    "env": "workspace:env",
     "pnp-webpack-plugin": "^1.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "socket.io-client": "^4.4.0"
   },
   "browserslist": [
     "defaults",
