--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,10 @@
 nodeLinker: "pnp"
 packageExtensions:
-  babel-plugin-relay@*:
-    dependencies:
-      "@babel/runtime": ^7.13.10
   html-webpack-plugin@*:
     dependencies:
       loader-utils: ^2.0.0
+  webpack-manifest-plugin@*:
+    dependencies:
+      webpack: ^5.47.0
 
 yarnPath: .yarn/releases/yarn-3.0.0.cjs
