--- a/env/package.json
+++ b/env/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "main": "index.cjs",
   "type": "commonjs",
+  "scripts": {
+    "start": "echo \"Loaded env\""
+  },
   "dependencies": {
     "@babel/core": "^7.13.15",
     "dotenv": "^8.2.0",
