--- a/package.json
+++ b/package.json
@@ -7,26 +7,23 @@
   "workspaces": [
     "env",
     "client",
+    "engine",
     "server"
   ],
-  "scripts": {
-    "start": "yarn workspaces foreach -ip run start",
-    "build": "yarn workspaces foreach -p run build"
-  },
   "keywords": [],
   "author": "danitheturtle",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "victor": "^1.1.0"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.14.8",
-    "dotenv": "^10.0.0"
-  },
-  "devDependencies": {
-    "babel-plugin-import": "^1.13.3"
+    "@babel/runtime": "^7.14.8"
   },
   "browserslist": [
     "defaults",
