renamed to snakey-mouse cause that's way better

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rawb-tv-snek",
+  "name": "snakey-mouse",
   "version": "0.0.1",
   "packageManager": "yarn@3.0.0",
   "description": "slither.io clone with 100% more memes",
