--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "http-proxy-middleware": "^1.1.0",
+    "json-loader": "^0.5.7",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
