Refactored config files to use .cjs extension. Updated default env to reflect current changes

--- a/env/.env
+++ b/env/.env
@@ -1,8 +1,9 @@
 # Application name / ID
-APP_NAME=rawb-tv-sneks
+APP_NAME=snakey-mouse
 
 # APP_ORIGIN=http://localhost:3000
-# SOCKET_ORIGIN=ws://localhost:4000
+# SOCKET_ORIGIN=localhost
+# SOCKET_PORT=4000
 # APP_ENV=development
 # VERSION=0.0.1
 
