--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --env=development",
-    "build": "rm -rf ../dist/web && webpack --env=production"
+    "build": "rm -rf ../dist/client && webpack --env=production"
   },
   "keywords": [],
   "author": "danitheturtle",
   "dependencies": {
     "@babel/runtime": "^7.14.8",
-    "engine": "*",
-    "env": "*",
+    "engine": "workspace:*",
+    "env": "workspace:*",
     "pnp-webpack-plugin": "^1.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import-path-replace": "^0.1.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
