--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "danitheturtle",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.19.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
