--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "start:compiled": "node ../dist/server/index.js",
-    "start": "nodemon --watch ./src ./src/index.js --exec babel-node",
-    "debug": "nodemon --inspect --watch ./src ./src/index.js --exec babel-node --env=development",
+    "start": "nodemon --watch ./src ./src/index.js --exec yarn babel-node -- --env=development",
+    "debug": "babel-node --inspect ./src/index.js --env=development",
     "build": "rm -rf ../dist/server && NODE_ENV=production && babel ./src --out-dir ../dist/server"
   },
   "keywords": [],
@@ -23,9 +23,9 @@
     "victor": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/node": "^7.14.9",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.14.7",
     "babel-plugin-import-path-replace": "^0.1.0",
     "minimist": "^1.2.5",
